# hydra

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/cuda/: a.out  matrix.cu  test
src/network/: matrix_flat.rs
